part-iii-istio-power/03-circuit-breaker/virtualservice-circuit-breaker.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: httpbin
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin
spec:
  host: httpbin
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1           # Maximum number of HTTP1 /TCP connections to a destination host. Default 1024.
      http:
        http1MaxPendingRequests: 1  # Maximum number of pending HTTP requests to a destination. Default 1024.
        maxRequestsPerConnection: 1 # Maximum number of requests per connection to a backend. Setting this parameter to 1 disables keep alive. Default 0, meaning “unlimited”, up to 2^29.
    outlierDetection:
      consecutiveErrors: 1          # Number of errors before a host is ejected from the connection pool. Defaults to 5. When the upstream host is accessed over HTTP, a 502, 503 or 504 return code qualifies as an error. When the upstream host is accessed over an opaque TCP connection, connect timeouts and connection error/failure events qualify as an error.
      interval: 1s                  # Time interval between ejection sweep analysis. format: 1h/1m/1s/1ms. MUST BE >=1ms. Default is 10s.
      baseEjectionTime: 3m          # Minimum ejection duration. A host will remain ejected for a period equal to the product of minimum ejection duration and the number of times the host has been ejected. This technique allows the system to automatically increase the ejection period for unhealthy upstream servers. format: 1h/1m/1s/1ms. MUST BE >=1ms. Default is 30s.
      maxEjectionPercent: 100       # Maximum % of hosts in the load balancing pool for the upstream service that can be ejected. Defaults to 10%.
